# tame

./: Cargo.toml  LICENSE  README.md  cli.mjs  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml  _ignore.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build.mjs
src/: lib.rs  main.rs
